[gd_scene load_steps=3 format=3 uid="uid://polev8ot41oe"]

[ext_resource type="Script" uid="uid://b6fyr7tuovevb" path="res://UI/crafting_dialog/crafting_dialog.gd" id="1_b26c6"]
[ext_resource type="PackedScene" uid="uid://c6wbf3a4wi7bd" path="res://UI/item_grid/item_grid.tscn" id="2_svpym"]

[node name="CraftingDialog" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_b26c6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Crafting"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipeContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/RecipeContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Recipes"

[node name="RecipeList" type="ItemList" parent="VBoxContainer/HBoxContainer2/RecipeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="DetailContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/DetailContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Ingredients"

[node name="IngredientsContainer" parent="VBoxContainer/HBoxContainer2/DetailContainer" instance=ExtResource("2_svpym")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2/DetailContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Results
"

[node name="ResultsContainer" parent="VBoxContainer/HBoxContainer2/DetailContainer" instance=ExtResource("2_svpym")]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2/DetailContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CraftButton" type="Button" parent="VBoxContainer/HBoxContainer2/DetailContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Craft"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/RecipeContainer/RecipeList" to="." method="_on_recipe_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/DetailContainer/CraftButton" to="." method="_on_craft_button_pressed"]
